fixing endpoint
